Fix wizard ETH and DAI input fields wrapping on mobile

--- a/public/css/_cp-wizard.scss
+++ b/public/css/_cp-wizard.scss
@@ -2,6 +2,28 @@ svg.wizard.expand-section-btn {
   float: right;
 }
 
+.wizard-section {
+  .input-values-container {
+    display: inline-block;
+    input.number-input {
+      min-width: 15rem;
+    }
+    @include respond-to('s+') {
+      input.number-input {
+        max-width: 80%;
+        min-width: unset;
+        width: 15rem;
+        & + .unit {
+          width: 20%;
+          max-width: 4em;
+          min-width: unset;
+          padding: 0;
+        }
+      }
+    }
+  }
+}
+
 .wizard-automated-transactions {
   user-select: none;
   overflow: hidden;
